<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_19pikbestruh_png_sw800">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="253dp"
        android:layout_height="257dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198"
        app:srcCompat="@drawable/doggggg" />

    <Button
        android:id="@+id/feedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/orange"
        android:text="@string/feed"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintStart_toEndOf="@+id/cleanButton"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/cleanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/orange"
        android:text="@string/clean"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/orange"
        android:text="@string/Play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:background="#81ED7E09"
        android:text="@string/Hunger"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cleanButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:background="#81ED7E09"
        android:text="@string/clean"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="75dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:background="#81ED7E09"
        android:text="@string/Happy"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textHunger"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/Number"
        android:background="#81ED7E09"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

    <TextView
        android:id="@+id/textClean"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="#81ED7E09"
        android:hint="@string/Number"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHunger" />

    <TextView
        android:id="@+id/textHappy"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="#81ED7E09"
        android:hint="@string/Number"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClean" />

</androidx.constraintlayout.widget.ConstraintLayout>